--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -13,17 +13,15 @@
         <IsA>library</IsA>
         <Summary>Sun's Java Runtime Environment for Standard Edition</Summary>
         <Description>This package provides Java Runtime Environment that is necessary to run the programs written in Java.</Description>
-        <!--Archive sha1sum="" type="binary" target="i686">http://download.oracle.com/otn-pub/java/jdk/6u37-b06/jdk-6u37-linux-i586.bin</Archive>
-        <Archive sha1sum="" type="binary" target="x86_64">http://download.oracle.com/otn-pub/java/jdk/6u37-b06/jdk-6u37-linux-x64.bin</Archive-->
         <Archive sha1sum="06e0357207c18202f7fea04df5570de1845ddd28" type="binary">http://pakete.pardususer.de/source-files/dummy.zip</Archive>
         <AdditionalFiles>
-            <AdditionalFile permission="0755" target="construct">construct.sh</AdditionalFile>
-            <AdditionalFile permission="0644" target="i586.sha1">jdk-6u37-linux-i586.bin.sha1</AdditionalFile>
-            <AdditionalFile permission="0644" target="x64.sha1">jdk-6u37-linux-x64.bin.sha1</AdditionalFile>
+<!--            <AdditionalFile permission="0755" target="construct">construct.sh</AdditionalFile>-->
+            <AdditionalFile permission="0644" target="i586.sha1">jdk-7u9-linux-i586.tar.gz.sha1sum</AdditionalFile>
+            <AdditionalFile permission="0644" target="x64.sha1">jdk-7u9-linux-x64.tar.gz.sha1sum</AdditionalFile>
             <!-- For no downloading binary file every time you run pisi bi
                  place appropriate binary in files folder and uncomment one from below lines.
-            <AdditionalFile permission="0644" target="jdk-6u37-linux-i586.bin">jdk-6u34-linux-i586.bin</AdditionalFile>
-            <AdditionalFile permission="0644" target="jdk-6u37-linux-x64.bin">jdk-6u34-linux-x64.bin</AdditionalFile>
+            <AdditionalFile permission="0644" target="jdk-7u9-linux-i586.tar.gz"</AdditionalFile>
+            <AdditionalFile permission="0644" target="jdk-7u9-linux-x64.tar.gz"</AdditionalFile>
             -->
         </AdditionalFiles>
         <BuildDependencies>
@@ -50,16 +48,7 @@
             <Path fileType="library">/opt/sun-jdk/jre/plugin</Path>
             <Path fileType="library">/opt/sun-jdk/jre/lib</Path>
             <Path fileType="config">/etc/env.d/20java_jre</Path>
-            <Path fileType="data">/opt/sun-jdk/db/LICENSE</Path>
-            <Path fileType="data">/opt/sun-jdk/db/RELEASE-NOTES.html</Path>
-            <Path fileType="data">/opt/sun-jdk/db/3RDPARTY</Path>
-            <Path fileType="data">/opt/sun-jdk/db/NOTICE</Path>
-            <Path fileType="data">/opt/sun-jdk/db/CHANGES.html</Path>
-            <Path fileType="data">/opt/sun-jdk/db/bin</Path>
-            <Path fileType="data">/opt/sun-jdk/db/frameworks</Path>
-            <Path fileType="data">/opt/sun-jdk/db/lib</Path>
             <Path fileType="data">/usr/lib/browser-plugins</Path>
-            <Path fileType="data">/opt/sun-jdk/jre</Path>
             <Path fileType="data">/usr/share/applications</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
@@ -83,7 +72,7 @@
             <Path fileType="executable">/opt/sun-jdk/bin</Path>
             <Path fileType="header">/opt/sun-jdk/include</Path>
             <Path fileType="library">/opt/sun-jdk/lib</Path>
-            <Path fileType="data">/opt/sun-jdk/src.zip</Path>
+            <Path fileType="data">/opt/sun-jdk/db</Path>
             <Path fileType="man">/opt/sun-jdk/man</Path>
             <Path fileType="config">/etc/env.d/21java_jdk</Path>
         </Files>
@@ -92,6 +81,7 @@
         </AdditionalFiles>
     </Package>
 
+<!--
     <Package>
         <Name>sun-jdk-demo</Name>
         <Summary>Demonstration files for Sun's Java platform</Summary>
@@ -105,7 +95,6 @@
         </Files>
     </Package>
 
-<!--
     <Package>
         <Name>sun-jdk-samples</Name>
         <Summary>Sample files for Sun's Java platform</Summary>
@@ -117,7 +106,6 @@
             <Path fileType="data">/opt/sun-jdk/sample</Path>
         </Files>
     </Package>
--->
     <Package>
         <Name>sun-jdk-doc</Name>
         <Summary>Documentation files for Apache Derby database engine</Summary>
@@ -132,11 +120,12 @@
             <Path fileType="data">/opt/sun-jdk/db/javadoc</Path>
         </Files>
     </Package>
+-->
 
     <History>
         <Update release="37">
-            <Date>2012-10-22</Date>
-            <Version>1.6.0_p37</Version>
+            <Date>2012-11-01</Date>
+            <Version>1.7_p9</Version>
             <Comment>Version bump</Comment>
             <Name>Marcin Bojara</Name>
             <Email>marcin.bojara@gmail.com</Email>
