--- a/programming/language/dotnet/webkit-sharp/pspec.xml
+++ b/programming/language/dotnet/webkit-sharp/pspec.xml
@@ -16,7 +16,7 @@
         <BuildDependencies>
             <Dependency>gtk-sharp</Dependency>
             <Dependency>mono-devel</Dependency>
-            <Dependency>webkit-gtk-devel</Dependency>
+            <Dependency>webkit-gtk2-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -25,7 +25,7 @@
         <RuntimeDependencies>
             <Dependency>gtk-sharp</Dependency>
             <Dependency>mono-runtime</Dependency>
-            <Dependency>webkit-gtk</Dependency>
+            <Dependency>webkit-gtk2</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
