--- a/programming/language/python/python-webkit-gtk/pspec.xml
+++ b/programming/language/python/python-webkit-gtk/pspec.xml
@@ -14,7 +14,7 @@
         <Description>python-webkit-gtk provides an API for developers to program WebKit GTK+ using Python.</Description>
         <Archive sha1sum="b7005c8bedd215032498dec543d937dd323d35da" type="tarbz2">http://pywebkitgtk.googlecode.com/files/pywebkitgtk-1.1.8.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency releaseFrom="11">webkit-gtk2-devel</Dependency>
+            <Dependency>webkit-gtk2-devel</Dependency>
             <Dependency>python-gtk-devel</Dependency>
             <Dependency>gtk2-devel</Dependency>
             <Dependency>libxslt-devel</Dependency>
@@ -24,7 +24,7 @@
     <Package>
         <Name>python-webkit-gtk</Name>
         <RuntimeDependencies>
-            <Dependency releaseFrom="11">webkit-gtk2</Dependency>
+            <Dependency>webkit-gtk2</Dependency>
             <Dependency>python-gtk</Dependency>
             <Dependency>gtk2</Dependency>
             <Dependency>libxslt</Dependency>
