--- a/programming/language/python/python-simplejson/pspec.xml
+++ b/programming/language/python/python-simplejson/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Simple, fast, extensible JSON encoder/decoder for Python</Summary>
         <Description>simplejson is a simple, fast, complete, correct and extensible JSON encoder and decoder for Python 2.5+. It is pure Python code with no dependencies, but includes an optional C extension for a serious speed boost.</Description>
-        <Archive sha1sum="106fe3481c9a3a9488cbe7d212eca7671837783f" type="targz">http://pypi.python.org/packages/source/s/simplejson/simplejson-2.1.1.tar.gz</Archive>
+        <Archive sha1sum="a8bb3aefe165a5d688a16f6277daf3ebd88097e9" type="targz">http://pypi.python.org/packages/source/s/simplejson/simplejson-2.6.2.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="8">
+            <Date>2012-10-11</Date>
+            <Version>2.6.2</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="7">
             <Date>2010-10-13</Date>
             <Version>2.1.1</Version>
