--- a/programming/language/python/python-feedparser/pspec.xml
+++ b/programming/language/python/python-feedparser/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>RSS/Atom feed parser in Python</Summary>
         <Description>feedparser parses RSS and Atom feeds in python.</Description>
-        <Archive sha1sum="3ab34ba314260cc79b2f558dec7ddc7037098b44" type="tarbz2">http://feedparser.googlecode.com/files/feedparser-5.0.1.tar.bz2</Archive>
+        <Archive sha1sum="038ca912f2ebd8f7ba339ae332764faab3c94adf" type="tarbz2">https://feedparser.googlecode.com/files/feedparser-5.1.2.tar.bz2</Archive>
     </Source>
 
     <Package>
@@ -27,6 +27,13 @@
     </Package>
 
     <History>
+        <Update release="7" type="security">
+            <Date>2012-11-11</Date>
+            <Version>5.1.2</Version>
+            <Comment>New stable relase</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="6" type="security">
             <Date>2011-04-14</Date>
             <Version>5.0.1</Version>
