--- a/programming/language/python/python-mako/pspec.xml
+++ b/programming/language/python/python-mako/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A python templating language</Summary>
         <Description>python-mako is a super-fast templating language that borrows the best ideas from the existing templating languages.</Description>
-        <Archive sha1sum="d43cd1ddcdd67602a4f94d065d284a7c56317ef5" type="targz">http://pypi.python.org/packages/source/M/Mako/Mako-0.3.4.tar.gz</Archive>
+        <Archive sha1sum="43557978c2d52e19073f5ff19ee23816f4af5d66" type="targz">http://pypi.python.org/packages/source/M/Mako/Mako-0.7.3.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -42,6 +42,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2012-11-11</Date>
+            <Version>0.7.3</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-13</Date>
             <Version>0.3.4</Version>
