--- a/programming/language/python/python-beautifulsoup/pspec.xml
+++ b/programming/language/python/python-beautifulsoup/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>HTML/XML parser for quick-turnaround applications like screen-scraping</Summary>
         <Description>Beautiful Soup parses arbitrarily invalid SGML and provides a variety of methods and Pythonic idioms for iterating and searching the parse tree.</Description>
-        <Archive sha1sum="183dfc206e7e7345187d5c8ec40aba3f6845e423" type="targz">http://www.crummy.com/software/BeautifulSoup/download/3.x/BeautifulSoup-3.0.8.1.tar.gz</Archive>
+        <Archive sha1sum="b23e78f058240eb8779dbc1b8a8d76bba4916df1" type="targz">http://www.crummy.com/software/BeautifulSoup/bs3/download/3.x/BeautifulSoup-3.2.1.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2012-11-11</Date>
+            <Version>3.2.1</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin</Email>
+        </Update>
         <Update release="8">
             <Date>2010-10-21</Date>
             <Version>3.0.8.1</Version>
