--- a/programming/language/python/python-bugzilla/pspec.xml
+++ b/programming/language/python/python-bugzilla/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>A python library for interacting with Bugzilla</Summary>
         <Description>python-bugzilla is a python library for interacting with bugzilla instances over XML-RPC.</Description>
-        <Archive sha1sum="779698d2fdfd996404848de12e72fb8f4396a9c7" type="tarbz2">https://fedorahosted.org/releases/p/y/python-bugzilla/python-bugzilla-0.6.2.tar.bz2</Archive>
+        <Archive sha1sum="2e71aaf04728405bdd24b9f017a0d86bd099f044" type="targz">https://fedorahosted.org/releases/p/y/python-bugzilla/python-bugzilla-0.7.0.tar.gz</Archive>
         <Patches>
             <Patch level="1">pardus.patch</Patch>
             <Patch level="1">severity.patch</Patch>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-11</Date>
+            <Version>0.7.0</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2011-08-11</Date>
             <Version>0.6.2</Version>
