--- a/programming/language/python/python-Cheetah/pspec.xml
+++ b/programming/language/python/python-Cheetah/pspec.xml
@@ -13,10 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>Templating module for Python</Summary>
         <Description>An advanced templating module for Python.</Description>
-        <Archive sha1sum="2e84daca803f19c4d69f2db7120af03b602394c8" type="targz">http://pypi.python.org/packages/source/C/Cheetah/Cheetah-2.4.3.tar.gz</Archive>
-        <Patches>
-            <Patch level="1">02_fedora_cheetah_2.7_compat.patch</Patch>
-        </Patches>
+        <Archive sha1sum="c218f5d8bc97b39497680f6be9b7bd093f696e89" type="targz">http://pypi.python.org/packages/source/C/Cheetah/Cheetah-2.4.4.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -32,6 +29,15 @@
     </Package>
 
     <History>
+        <Update release="11">
+            <Date>2012-11-11</Date>
+            <Version>2.4.4</Version>
+            <Comment>version bump
+               * 2.7_compat inside source
+            </Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="10">
             <Date>2010-12-12</Date>
             <Version>2.4.3</Version>
