--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -11,14 +11,14 @@
         <License>GPLv2</License>
         <License>GPLv3</License>
         <IsA>library</IsA>
-        <Summary>A set of Python bindings for the Qt 4.x Toolkit</Summary>
+        <Summary>A set of Python 2.x bindings for the Qt 4.x Toolkit</Summary>
         <Description>Qt is a set of C++ libraries and development tools that includes platform independent abstractions for graphical user interfaces, networking, threads, Unicode, regular expressions, SQL databases, SVG, OpenGL, XML, and user and application settings. PyQt implements 440 of these classes as a set of Python modules.</Description>
         <Archive sha1sum="1f0d10fff6bcd6008a980589fd889ccdbc8eb1c8" type="targz">http://downloads.sourceforge.net/project/pyqt/PyQt4/PyQt-4.9.5/PyQt-x11-gpl-4.9.5.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>qt-devel</Dependency>
             <Dependency versionFrom="4.13.2">sip-devel</Dependency>
             <Dependency versionFrom="4.8.1">qt-webkit</Dependency>
-
+            <Dependency>python3</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
@@ -33,50 +33,114 @@
             <Dependency release="current">python-qt</Dependency>
             <Dependency release="current">python-qt-webkit</Dependency>
             <Dependency release="current">python-qt-phonon</Dependency>
+            <Dependency release="current">python3-qt</Dependency>
+            <Dependency release="current">python3-qt-webkit</Dependency>
+            <Dependency release="current">python3-qt-phonon</Dependency>
             <Dependency versionFrom="4.13.2">sip-devel</Dependency>
         </RuntimeDependencies>
         <Files>
-            <Path fileType="executable">/usr/bin</Path>
             <Path fileType="data">/usr/share/sip</Path>
+        </Files>
+    </Package>
+
+    <Package>
+        <Name>python-qt-common</Name>
+        <Summary>Common files shared between python-qt and python3-qt</Summary>
+        <RuntimeDependencies>
+            <Dependency versionFrom="4.8.1">qt</Dependency>
+            <Dependency versionFrom="4.13.2">sip</Dependency>
+        </RuntimeDependencies>
+         <Conflicts>
+            <Package releaseTo="60">python-qt-devel</Package>
+            <Package releaseTo="60">python-qt</Package>
+        </Conflicts>
+    <Files>
+            <Path fileType="executable">/usr/bin/pylupdate4</Path>
+            <Path fileType="executable">/usr/bin/pyrcc4</Path>
+            <Path fileType="library">/usr/lib/qt4</Path>
+            <Path fileType="data">/usr/share/qt4/qsci</Path>
+            <Path fileType="library">/usr/lib/qt4/plugins/designer</Path>
+            <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <Package>
         <Name>python-qt</Name>
         <RuntimeDependencies>
+            <Dependency release="current">python-qt-common</Dependency>
             <Dependency versionFrom="4.8.1">qt</Dependency>
             <Dependency versionFrom="4.13.2">sip</Dependency>
         </RuntimeDependencies>
+        <Conflicts>
+            <Package releaseTo="60">python-qt-devel</Package>
+        </Conflicts>
         <Files>
-            <Path fileType="library">/usr/lib</Path>
-            <Path fileType="doc">/usr/share/doc</Path>
-            <Path fileType="data">/usr/share/qt4/qsci</Path>
-            <Path fileType="library">/usr/lib/qt4/plugins/designer</Path>
+            <Path fileType="executable">/usr/bin/pyuic4</Path>
+            <Path fileType="library">/usr/lib/python2*</Path>
+        </Files>
+    </Package>
+
+    <Package>
+        <Name>python3-qt</Name>
+        <Summary>A set of Python 3.x bindings for the Qt 4.x Toolkit</Summary>
+        <RuntimeDependencies>
+            <Dependency release="current">python-qt-common</Dependency>
+            <Dependency versionFrom="4.8.1">qt</Dependency>
+            <Dependency versionFrom="4.13.2">python3-sip</Dependency>
+        </RuntimeDependencies>
+        <Files>
+            <Path fileType="executable">/usr/bin/pyuic4-python3</Path>
+            <Path fileType="library">/usr/lib/python3*</Path>
         </Files>
     </Package>
 
     <Package>
         <Name>python-qt-webkit</Name>
-        <Summary>Python bindings for QtWebkit library</Summary>
+        <Summary>Python 2.x bindings for QtWebkit library</Summary>
         <RuntimeDependencies>
             <Dependency release="current">python-qt</Dependency>
             <Dependency versionFrom="4.8.1">qt-webkit</Dependency>
         </RuntimeDependencies>
         <Files>
-            <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/*WebKit*</Path>
-            <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/uic/widget-plugins/*webkit*</Path>
+            <Path fileType="library">/usr/lib/python2*/site-packages/PyQt4/*WebKit*</Path>
+            <Path fileType="library">/usr/lib/python2*/site-packages/PyQt4/uic/widget-plugins/*webkit*</Path>
+        </Files>
+    </Package>
+
+    <Package>
+        <Name>python3-qt-webkit</Name>
+        <Summary>Python 3.x bindings for QtWebkit library</Summary>
+        <RuntimeDependencies>
+            <Dependency release="current">python3-qt</Dependency>
+            <Dependency versionFrom="4.8.1">qt-webkit</Dependency>
+        </RuntimeDependencies>
+        <Files>
+            <Path fileType="library">/usr/lib/python3*/site-packages/PyQt4/*WebKit*</Path>
+            <Path fileType="library">/usr/lib/python3*/site-packages/PyQt4/uic/widget-plugins/*webkit*</Path>
         </Files>
     </Package>
 
     <Package>
         <Name>python-qt-phonon</Name>
-        <Summary>Python bindings for Phonon multimedia library</Summary>
+        <Summary>Python 2.x bindings for Phonon multimedia library</Summary>
         <RuntimeDependencies>
             <Dependency release="current">python-qt</Dependency>
         </RuntimeDependencies>
         <Files>
-            <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/*phonon*</Path>
-            <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/uic/widget-plugins/*phonon*</Path>
+            <Path fileType="library">/usr/lib/python2*/site-packages/PyQt4/*phonon*</Path>
+            <Path fileType="library">/usr/lib/python2*/site-packages/PyQt4/uic/widget-plugins/*phonon*</Path>
+        </Files>
+    </Package>
+
+    <Package>
+        <Name>python3-qt-phonon</Name>
+        <Summary>Python 3.x bindings for Phonon multimedia library</Summary>
+        <RuntimeDependencies>
+            <Dependency release="current">python3-qt</Dependency>
+        </RuntimeDependencies>
+        <Files>
+            <Path fileType="library">/usr/lib/python3*/site-packages/PyQt4/*phonon*</Path>
+            <Path fileType="library">/usr/lib/python3*/site-packages/PyQt4/uic/widget-plugins/*phonon*</Path>
         </Files>
     </Package>
 
@@ -87,18 +151,25 @@
             <Dependency release="current">python-qt</Dependency>
         </RuntimeDependencies>
         <Files>
-            <Path fileType="doc">/usr/share/doc/*/html</Path>
+            <Path fileType="doc">/usr/share/doc/python-qt/html</Path>
         </Files>
     </Package>
 
     <History>
-      <Update release="60">
+      <Update release="61">
+            <Date>2012-11-10</Date>
+            <Version>4.9.5</Version>
+            <Comment>add python3 support</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
+        <Update release="60">
             <Date>2012-10-02</Date>
             <Version>4.9.5</Version>
             <Comment>Version bump</Comment>
             <Name>Yusuf Aydemir</Name>
             <Email>yusuf.aydemir@istanbul.com</Email>
-        </Update>      
+        </Update>
       <Update release="59">
             <Date>2012-02-17</Date>
             <Version>4.9.1</Version>
