--- a/programming/language/python3/pspec.xml
+++ b/programming/language/python3/pspec.xml
@@ -11,13 +11,16 @@
         <Summary>Next generation of the python high-level scripting language</Summary>
         <Description>Next generation of the python high-level scripting language</Description>
         <BuildDependencies>
+            <Dependency releaseFrom="215">pisi</Dependency>
             <Dependency>expat-devel</Dependency>
             <Dependency>sqlite-devel</Dependency>
             <Dependency>tcltk-devel</Dependency>
             <Dependency>valgrind</Dependency>
         </BuildDependencies>
-        <Archive sha1sum="4c2d562a0681ba27bc920500050e2f08de224311" type="tarbz2">http://www.python.org/ftp/python/3.2.3/Python-3.2.3.tar.bz2</Archive>
-        <Patches/>
+        <Archive sha1sum="833d73565e1b665f1878504081dc985a5a06e46a" type="tarxz">http://www.python.org/ftp/python/3.3.0/Python-3.3.0.tar.xz</Archive>
+        <Patches>
+            <Patch level="1">Python-3.1.1-rpath.patch</Patch>
+        </Patches>
     </Source>
     <Package>
         <Name>python3</Name>
@@ -30,14 +33,22 @@
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable" permanent="0">/usr/bin/*</Path>
-            <Path fileType="header" permanent="0">/usr/include/python3.2mu/*</Path>
+            <Path fileType="header" permanent="0">/usr/include/python3.3m/*</Path>
             <Path fileType="library" permanent="0">/usr/lib/pkgconfig/*</Path>
-            <Path fileType="library" permanent="0">/usr/lib/python3.2/*</Path>
-	    <Path fileType="library" permanent="0">/usr/lib/*</Path>
+            <Path fileType="library" permanent="0">/usr/lib/python3.3/*</Path>
+            <Path fileType="library" permanent="0">/usr/lib/*</Path>
             <Path fileType="man" permanent="0">/usr/share/man/man1/*</Path>
+            <Path fileType="doc" permanent="0">/usr/share/doc</Path>
         </Files>
     </Package>
     <History>
+        <Update release="2">
+            <Date>2012-11-11</Date>
+            <Version>3.3.0</Version>
+            <Comment>Version bump</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2012-07-20</Date>
             <Version>3.2.3</Version>
