--- a/programming/language/python/python-daap/pspec.xml
+++ b/programming/language/python/python-daap/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>python-daap</Name>
-        <Homepage>http://jerakeen.org/code/pythondaap</Homepage>
+        <Homepage>https://github.com/tominsam/pythondaap</Homepage>
         <Packager>
             <Name>Pardus ANKA Admins</Name>
             <Email>pisiciftligi@pardus-linux.org</Email>
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A DAAP client implemented in Python</Summary>
         <Description>PythonDaap is a DAAP client implemented in Python, and based on PyTunes.</Description>
-        <Archive sha1sum="9448d2d29023f60021d714592090d41dae0870d9" type="targz">http://static.jerakeen.org/files/PythonDaap-0.7.1.tar.gz</Archive>
+        <Archive sha1sum="70521f3f4dbc43364504089929ab12c468f64ee8" type="targz">https://github.com/downloads/pardus-anka/2013/PythonDaap-0.7.2.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-setuptools</Dependency>
         </BuildDependencies>
@@ -27,6 +27,15 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2011-07-06</Date>
+            <Version>0.7.2</Version>
+            <Comment>version bump git snapshot
+                * Added user-agent header
+            </Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="4">
             <Date>2011-07-06</Date>
             <Version>0.7.1</Version>
