--- a/programming/language/python/python-egenix-mx-base/pspec.xml
+++ b/programming/language/python/python-egenix-mx-base/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Egenix utils for Python</Summary>
         <Description>python-egenix-mx-base is a collection of Python extensions written in ANSI C and Python which provide a large spectrum of useful additions to everyday Python programming.</Description>
-        <Archive sha1sum="4bedefb9a698bad754b8847ab6432e77d1c58227" type="targz">http://downloads.egenix.com/python/egenix-mx-base-3.1.3.tar.gz</Archive>
+        <Archive sha1sum="22d7fcbd582177f9a43245eadc3644f3b48cc9a7" type="targz">http://downloads.egenix.com/python/egenix-mx-base-3.2.4.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -37,6 +37,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2012-11-11</Date>
+            <Version>3.2.4</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2010-03-10</Date>
             <Version>3.1.3</Version>
