--- a/programming/language/python/python-fltk/pspec.xml
+++ b/programming/language/python/python-fltk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python wrapper for FLTK</Summary>
         <Description>A Python wrapper for the FLTK cross-platform graphical user-interface library</Description>
-        <Archive sha1sum="2c55e438bb8d37b86b5c9c27339dd2222338d835" type="targz">mirrors://sourceforge/pyfltk/pyFltk-1.1.5.tar.gz</Archive>
+        <Archive sha1sum="82c40bc11e0cef5b191949587b7e58c3a740cd88" type="targz">mirrors://sourceforge/pyfltk/pyFltk-1.3.0.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>fltk-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2012-11-11</Date>
+            <Version>1.3.0</Version>
+            <Comment>New stable release</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="4">
             <Date>2011-02-07</Date>
             <Version>1.1.5</Version>
