--- a/programming/language/python/pyopenssl/pspec.xml
+++ b/programming/language/python/pyopenssl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python interface to the OpenSSL library</Summary>
         <Description>This module is a rather thin wrapper around (a subset of) the OpenSSL library. A lot of the object methods do nothing more than calling a corresponding function in the OpenSSL library.</Description>
-        <Archive sha1sum="11c956d317ab2b1628937a2681acc31f4b890fe8" type="targz">http://pypi.python.org/packages/source/p/pyOpenSSL/pyOpenSSL-0.10.tar.gz</Archive>
+        <Archive sha1sum="b4de25c5e4e9d9bc375c419071efc45fa96d5597" type="targz">http://pypi.python.org/packages/source/p/pyOpenSSL/pyOpenSSL-0.13.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,15 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2012-11-1</Date>
+            <Version>0.13</Version>
+            <Comment>
+                * Version bump
+            </Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-10-27</Date>
             <Version>0.10</Version>
