--- a/desktop/kde/l10n/kde-l10n-nl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nl/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:nl</IsA>
         <Summary>Dutch KDE4 internationalization package</Summary>
         <Description>kde-l10n-nl is the KDE4 internationalization package that provides Dutch translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="c79535244f22fb3743a3ae6c992ee45f94395df5">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-nl-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="a4fcf681975ab30c72e61d2d7c3c4c7f2c50f366">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-nl-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="46">
+            <Date>2012-11-11</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="45">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
