--- a/programming/language/python/python-zope-interface/pspec.xml
+++ b/programming/language/python/python-zope-interface/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>zope.interface library</Summary>
         <Description>Interfaces are objects that specify (document) the external behavior of objects that provide them.</Description>
-        <Archive sha1sum="3bdc444988064d035fb1a3195e336de6b446f0fa" type="targz">http://pypi.python.org/packages/source/z/zope.interface/zope.interface-3.6.1.tar.gz</Archive>
+        <Archive sha1sum="35e34c4ba0490db60647328a47ee830e062f3f4c" type="targz">http://pypi.python.org/packages/source/z/zope.interface/zope.interface-4.0.1.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2012-11-11</Date>
+            <Version>4.0.1</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2010-10-13</Date>
             <Version>3.6.1</Version>
