--- a/programming/language/dotnet/ndesk-dbus/pspec.xml
+++ b/programming/language/dotnet/ndesk-dbus/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A C# implementation of D-Bus</Summary>
         <Description>ndesk-dbus is a C# implementation of D-Bus. It's often referred to as "managed D-Bus" to avoid confusion with existing bindings (which wrap libdbus).</Description>
-        <Archive sha1sum="4971a54ea6cbee41266cc89040ca427cfc3f99f0" type="targz">http://www.ndesk.org/archive/dbus-sharp/ndesk-dbus-0.6.0.tar.gz</Archive>
+        <Archive sha1sum="ab129ba3d566e6d8eedd41bcdbd18e65edf095fe" type="targz">http://www.ndesk.org/archive/dbus-sharp/ndesk-dbus-0.6.1a.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>mono-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-11</Date>
+            <Version>0.6.1a</Version>
+            <Comment>Version bump</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-10-21</Date>
             <Version>0.6.0</Version>
