--- a/programming/language/python/python-gdata/pspec.xml
+++ b/programming/language/python/python-gdata/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A simple protocol for reading and writing data on the web</Summary>
         <Description>The Google data Python Client Library provides a library and source code that make it easy to access data through Google Data APIs.</Description>
-    <Archive sha1sum="8445e886b2970ff74523c775e7b95515c0f8d813" type="zip">http://gdata-python-client.googlecode.com/files/gdata-2.0.11.final.zip</Archive>
+    <Archive sha1sum="d2d9f60699611f95dd8c328691a2555e76191c0c" type="targz">https://gdata-python-client.googlecode.com/files/gdata-2.0.17.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2012-11-12</Date>
+            <Version>2.0.17</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="10">
             <Date>2010-10-13</Date>
             <Version>2.0.11</Version>
