--- a/programming/language/python/python-gtk/pspec.xml
+++ b/programming/language/python/python-gtk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>GTK+ bindings for Python</Summary>
         <Description>python-gtk lets you to easily create programs with a graphical user interface using the Python programming language and GTK+ library.</Description>
-        <Archive sha1sum="6a180d0c9ed19179662f51decb150b2c98cc9362" type="tarbz2">mirrors://gnome/pygtk/2.22/pygtk-2.22.0.tar.bz2</Archive>
+        <Archive sha1sum="344e6a32a5e8c7e0aaeb807e0636a163095231c2" type="tarbz2">mirrors://gnome/pygtk/2.24/pygtk-2.24.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>cairo-devel</Dependency>
             <Dependency>pango-devel</Dependency>
@@ -85,6 +85,16 @@
     </Package>
 
     <History>
+        <Update release="16">
+            <Date>2012-11-11</Date>
+            <Version>2.24.0</Version>
+            <Comment>
+                * Add --without-glade configure option. No change to current behaviour.
+                * Small setup.py fixes.
+            </Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="15">
             <Date>2010-11-27</Date>
             <Version>2.22.0</Version>
