--- a/programming/language/python/python-httplib2/pspec.xml
+++ b/programming/language/python/python-httplib2/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A comprehensive HTTP client library in Python</Summary>
         <Description>httplib2 is a comprehensive HTTP client library that supports many features left out of other HTTP libraries.</Description>
-        <Archive sha1sum="e30ac0f099c1d7f9dc5bfb309441f65fb01f5dd8" type="targz">http://httplib2.googlecode.com/files/httplib2-0.7.1.tar.gz</Archive>
+        <Archive sha1sum="4ad095cb3d65ddded5381dc4edc4078f908d7885" type="targz">http://httplib2.googlecode.com/files/httplib2-0.7.6.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,15 @@
     </Package>
 
     <History>
+       <Update release="7">
+            <Date>2012-11-12</Date>
+            <Version>0.7.6</Version>
+            <Comment>Update to new release
+                Read the CHANGELOG at http://httplib2.googlecode.com/hg/CHANGELOG
+            </Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
        <Update release="6">
             <Date>2011-06-29</Date>
             <Version>0.7.1</Version>
