--- a/programming/language/python/python-SQLObject/pspec.xml
+++ b/programming/language/python/python-SQLObject/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>An object-relational mapper for Python programming language</Summary>
         <Description>python-SQLObject is an object-relational mapper for Python programming language. It allows you to translate RDBMS table rows into Python objects, and manipulate those objects to transparently manipulate the database.</Description>
-        <Archive sha1sum="049b1b0ad63c07971e6ee61c6193fe41e4549b6e" type="targz">http://pypi.python.org/packages/source/S/SQLObject/SQLObject-0.15.1.tar.gz</Archive>
+        <Archive sha1sum="54b8e36593b27eba92d445f3bf3dce9f112eccdc" type="targz">http://pypi.python.org/packages/source/S/SQLObject/SQLObject-1.3.2.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -38,6 +38,13 @@
     </Package>
 
     <History>
+        <Update release="13">
+            <Date>2012-11-13</Date>
+            <Version>1.3.2</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="12">
             <Date>2011-03-24</Date>
             <Version>0.15.1</Version>
