--- a/programming/language/python/python-irclib/pspec.xml
+++ b/programming/language/python/python-irclib/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python IRC client library</Summary>
         <Description>python-irclib provides python IRC client libraries.</Description>
-        <Archive sha1sum="813a9182045e8cf6c4d1a76b707fb64c2fcf22c4" type="targz">mirrors://sourceforge/python-irclib/python-irclib-0.4.8.tar.gz</Archive>
+        <Archive sha1sum="4f272580aa914c5c6de6435f96cf1d64a60ab11e" type="zip">mirrors://sourceforge/python-irclib/python-irclib-0.6.4.zip</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2012-11-13</Date>
+            <Version>0.6.4</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinc Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-08-16</Date>
             <Version>0.4.8</Version>
