--- a/programming/language/python/python-kid/pspec.xml
+++ b/programming/language/python/python-kid/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>python-kid</Name>
-        <Homepage>http://www.kid-templating.org/</Homepage>
+        <Homepage>http://pypi.python.org/pypi/kid//</Homepage>
         <Packager>
             <Name>Pardus ANKA Admins</Name>
             <Email>pisiciftligi@pardus-linux.org</Email>
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>A simple and Pythonic XML template language</Summary>
         <Description>python-kid is a simple template language for XML based vocabularies written in Python. It was spawned as a result of a kinky love triangle between XSLT, TAL, and PHP.</Description>
-        <Archive sha1sum="8a6b7a2323d266dacea22898465cb4e6929af9e7" type="targz">http://www.kid-templating.org/dist/0.9.6/kid-0.9.6.tar.gz</Archive>
+        <Archive sha1sum="1ffabd26a17f148e8147f5d5e4eaa7b55734df15" type="targz">http://pypi.python.org/packages/source/k/kid/kid-0.9.6.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-13</Date>
+            <Version>0.9.6</Version>
+            <Comment>Mass rebuild for Pardus ANKA, change hompage</Comment>
+            <Name>Erdinç gültekin</Name>
+            <Email>erdincgultekin</Email>
+        </Update>
         <Update release="2">
             <Date>2010-10-13</Date>
             <Version>0.9.6</Version>
