--- a/programming/language/python/python-libacl/pspec.xml
+++ b/programming/language/python/python-libacl/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>python-libacl</Name>
-        <Homepage>http://pylibacl.sourceforge.net</Homepage>
+        <Homepage>http://pylibacl.k1024.org/</Homepage>
         <Packager>
             <Name>Pardus ANKA Admins</Name>
             <Email>pisiciftligi@pardus-linux.org</Email>
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>This python 2.2+ extension module allows you to manipulate the POSIX.1e Access Control Lists present in some os/filesystem combinations</Summary>
         <Description>python-libacl is a C extension module for Python which implements POSIX ACLs manipulation. It is a wrapper on top of the systems's acl C library.</Description>
-        <Archive sha1sum="cdd531494ebc226e718a8bc8bd9eb4cf4bffee08" type="targz">mirrors://sourceforge/pylibacl/pylibacl-0.5.0.tar.gz</Archive>
+        <Archive sha1sum="3dbaade48bc5e217b7e88d762ec739af63b94827" type="targz">https://github.com/downloads/iustin/pylibacl/pylibacl-0.5.1.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2010-04-30</Date>
+            <Version>0.5.1</Version>
+            <Comment>Version bump: hompge change</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-04-30</Date>
             <Version>0.5.0</Version>
